[tool.poetry]
name = "reflekt-dbt-demo"
version = "0.1.0"
description = ""
authors = ["Greg Clunies <greg.clunies@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dbt-snowflake = "^1.1.0"
sqlfluff = "^0.13.2"
sqlfluff-templater-dbt = "^0.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
