[tool.poetry]
name = "reflekt-dbt-demo"
version = "0.1.0"
description = ""
authors = ["Greg Clunies <greg.clunies@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
dbt-snowflake = "^1.1.0"
sqlfluff = "^1.4.1"
dbt-osmosis = "^0.9.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
