[tool.poetry]
name = "demo-dbt-reflekt"
version = "0.1.0"
description = ""
authors = ["Greg Clunies <greg.clunies@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
dbt-snowflake = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
